# kiota-http-python

./: CHANGELOG.md  Makefile  Pipfile  README.md  pyproject.toml  requirements-dev.txt
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build.yml  build_publish.yml  codeql-analysis.yml  publish.yml  release.yml
kiota_http/: __init__.py  _exceptions.py  _version.py  exceptions.py  httpx_request_adapter.py  kiota_client.py  kiota_client_factory.py  observability_options.py
kiota_http/middleware/: __init__.py  async_kiota_transport.py  headers_inspection_handler.py  middleware.py  parameters_name_decoding_handler.py  redirect_handler.py  retry_handler.py  url_replace_handler.py  user_agent_handler.py
kiota_http/middleware/options/: __init__.py  headers_inspection_handler_option.py  parameters_name_decoding_handler_option.py  redirect_handler_option.py  response_handler_option.py  retry_handler_option.py  telemetry_handler_option.py  url_replace_option.py
tests/: conftest.py  test_httpx_request_adapter.py  test_kiota_client.py  test_kiota_client_factory.py
tests/helpers/: __init__.py  mock_response_object.py  user.py
tests/middleware/: test_parameters_name_decoding_handler.py  test_redirect_handler.py  test_retry_handler.py
tests/middleware_tests/: test_headers_inspection_handler.py  test_parameters_name_decoding_handler.py  test_redirect_handler.py  test_retry_handler.py  test_url_replace_handler.py  test_user_agent_handler.py
